# markata

./: .flake8  .gitignore  .markataignore  .plugin-prompt.md  404.html  404.md  BUILD_SCRIPTS_README.md  CHANGELOG.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MANIFEST.in  QUICK_START.md  README.md  SECURITY.md  _redirects  admonitions.md  app.css  atom.xsl  base.xsl  build-all-themes.sh  color-theme.md  contributing.md  contributing.yml  create-manual.md  didyoumean.json  home-page.md  index.html  index.md  justfile  markata.ini  markata.toml  markata_dev.md  multi-template.md  nav.md  post.css  pyproject.toml  raw.md  requirements.txt  requirements_dev.txt  rss.xml  (+11 more)
.github/: FUNDING.yml
.github/workflows/: deploy-markata-docs.yml  release-markata.yml
CHANGELOG/: index.html
_logs/debug/: index.html
_logs/info/: index.html
_logs/warning/: index.html
about/: index.html
admonitions/: index.html  raw.md
admonitions/og/: index.html
admonitions/partial/: index.html
all/: atom.xml  index.html  rss.xml  sitemap.xml
all/partial/: index.html
analytics/: index.html
autodoc/: atom.xml  index.html  rss.xml  sitemap.xml
autodoc/partial/: index.html
changelog/: index.html  raw.md
changelog/og/: index.html
changelog/partial/: index.html
cli/: index.html
cli/cli/: index.html
cli/didyoumean/: index.html
cli/init/: index.html
cli/main/: index.html
cli/plugins/: index.html
cli/runner/: index.html
color-theme/: index.html
color-theme/og/: index.html
color-theme/partial/: index.html
config-model/: index.html
core-modules/: index.html  rss.xml  sitemap.xml
core_modules/: atom.xml  index.html  rss.xml  sitemap.xml
core_modules/partial/: index.html
covers/: index.html
create-covers/: index.html
create-manual/: index.html  raw.md
create-manual/og/: index.html
create-manual/partial/: index.html
datetime/: index.html
didyoumean/: index.html
docs/: 404.md  admonitions.md  atom.xml  color-theme.md  home-page.md  index.html  index.md  multi-template.md  nav.md  rss.xml  runtime-config-override.md  sitemap.xml
docs/partial/: index.html
docs/project-gallery/: markata_dev.md
errors/: index.html
exceptions/: index.html
feeds/: index.html
header/: index.html
heading-link/: index.html
home-page/: index.html
home-page/og/: index.html
home-page/partial/: index.html
hookspec/: index.html
init/: index.html
jinja-env/: index.html
jinja-md/: index.html
jinja_meta/: index.html
lifecycle/: index.html
main/: index.html
manifest/: index.html
markata/: Post.py  __about__.md  __about__.py  __init__.md  __init__.py  __main__.md  __main__.py  background.py  cli.py  errors.md  errors.py  exceptions.md  exceptions.py  hookspec.md  hookspec.py  index.html  lifecycle.md  lifecycle.py  runner.py  standard_config.md  standard_config.py
markata-dev/: index.html  raw.md
markata-dev/og/: index.html
markata-dev/partial/: index.html
markata/Post/: index.html
markata/__about__/: index.html
markata/__init__/: index.html
markata/__main__/: index.html
markata/about/: index.html
markata/auto-description/: index.html
markata/base-cli/: index.html
markata/cli/: __init__.md  __init__.py  __main__.md  __main__.py  cli.md  cli.py  describe.py  didyoumean.md  didyoumean.py  header.md  header.py  index.html  plugins.md  plugins.py  runner.md  runner.py  server.md  server.py  summary.md  summary.py
markata/didyoumean/: index.html
markata/errors/: index.html
markata/exceptions/: index.html
markata/flat-slug/: index.html
markata/generator/: index.html
markata/hookspec/: index.html
markata/icon-resize/: index.html
markata/init/: index.html
markata/lifecycle/: index.html
markata/main/: index.html
markata/md-it-wikilinks/: index.html
markata/plugins/: .null-ls_484670_post_template.py  __init__.md  admonition.css  analytics.md  analytics.py  auto_description.md  auto_description.py  auto_title.md  auto_title.py  base_cli.md  base_cli.py  config_editor.py  config_model.md  config_model.py  copy_assets.md  copy_assets.py  covers.md  covers.py  create_covers.md  create_covers.py  create_models.md  create_models.py  csv.py  datetime.md  datetime.py  default_doc_template.md  default_feed_style.xsl  default_log_template.html  default_post_template.html  default_post_template.html.jinja  default_redirect_template.html  default_rss_template.xml  default_service_worker_template.js  default_xsl_template.xsl  didyoumean.md  didyoumean.py  docs.md  docs.py  fast.py  feeds.md  (+72 more)
markata/post-template/: index.html
markata/publish-dev-to-source/: index.html
markata/publish-html/: index.html
markata/redirects/: index.html
markata/rss/: index.html
markata/scripts/: migrate_to_slugify.md  migrate_to_slugify.py
markata/skip/: index.html
markata/standard-config/: index.html
markata/standard_config/: index.html
markata/subroute/: index.html
markata/summary/: index.html
markata/templates/: 404.html  admonition.html  app.css  atom.xml  atom.xsl  base.html  base.xsl  base_body.html  base_head.html  base_xsl.html  card.html  chartjs.html  chat.html  clickable-images.html  content_base.html  didyoumean_partial.html  dynamic_head.html  feed.html  feed_partial.html  og.html  (+25 more)
mdit-details/: index.html
multi-template/: index.html  raw.md
nav/: index.html
og/: index.html
partial/: index.html
plugins/: atom.xml  index.html  rss.xml  sitemap.xml
post-model/: index.html
prevnext/: index.html
project-gallery/: atom.xml  index.html  rss.xml  sitemap.xml
render-markdown/: index.html
server/: index.html
service-worker/: index.html
setup-logging/: index.html
standard-config/: index.html
static/: pretty-feed-v3.xsl
tailwind/: app.css
tapes/: build.tape  help.tape  list.tape  new-blog.tape
test/: index.html
test-feeds/: index.html
test-post-model/: index.html
test-redirects/: index.html
tests/: index.html  test_build.py  test_doc_page.py  test_feeds.md  test_feeds.py  test_markata.py  test_one_default_page.py  test_one_default_page_with_path_prefix.py
waylonwalker/: index.html  raw.md
(+254 files in other folders)
